kubernetes/deprecated/apps/firefly/core/firefly-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: firefly
  name: firefly-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
    kubernetes.io/tls-acme: "true"
    external-dns.alpha.kubernetes.io/hostname: firefly.${SECRET_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${SECRET_DOMAIN}
    hajimari.io/enable: "true"
  labels:
    name: firefly-ingress
spec:
  rules:
  - host: firefly.${SECRET_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: firefly
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - firefly.${SECRET_DOMAIN}
